[gd_scene load_steps=17 format=3 uid="uid://b2bsjrb8uq54n"]

[ext_resource type="Script" path="res://combate.gd" id="1_76hwp"]
[ext_resource type="Texture2D" uid="uid://dvoaxroxcp42t" path="res://pixel-8-bits-rojo-y-amarillo-fondo-de-carpa-de-circo-alta-resolucion-4k-fondo-2jmxw1y.jpeg" id="1_bqnu1"]
[ext_resource type="Texture2D" uid="uid://donuiefylmymv" path="res://osito.jpeg" id="2_ixi13"]
[ext_resource type="Texture2D" uid="uid://cccijrehynvcl" path="res://clown_blue.png" id="7_gc2og"]
[ext_resource type="Texture2D" uid="uid://c7vpsnpmfs0v2" path="res://nose_blue.png" id="9_57hj2"]
[ext_resource type="Texture2D" uid="uid://c0hvd73vfeulj" path="res://sonrisa.jpeg" id="9_efevc"]
[ext_resource type="Texture2D" uid="uid://d3wyvn7mhka6p" path="res://cartaJoker.jpeg" id="10_4gqkx"]
[ext_resource type="FontFile" uid="uid://ck4ku4amf6qp4" path="res://SpaceMono-Regular.ttf" id="11_qpa2r"]
[ext_resource type="FontFile" uid="uid://lwwwivrie0ka" path="res://SingleDay-Regular.ttf" id="14_8hric"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_w6ybe"]
load_path = "res://.godot/imported/o1.png-b44a008d1a4c1635173d80452840fe31.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_7vy8i"]
load_path = "res://.godot/imported/k1.png-23c7997d223a9f1f95cd226ea8afa0dd.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_6afua"]
load_path = "res://.godot/imported/e1.png-584e02d6f50fd1c14b1b72645706eda5.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_d62nk"]
load_path = "res://.godot/imported/s1.png-4669e8a50f66331c763d85d1a19a4525.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_wvgyw"]
load_path = "res://.godot/imported/j1.png-4341ee4922d7b2cc8f9e2a9372f76f19.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_55uus"]
load_path = "res://.godot/imported/j2.jpeg-130a36a37ffb7b4a0bf412dca3e59ce2.ctex"

[sub_resource type="GDScript" id="GDScript_sxsv5"]
script/source = "extends RichTextLabel

#var Combate = preload(\"res://combate.tscn\")

# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass


func _on_keypressed_timer_timeout():
	pass
	#pass # Replace with function body.
	#en caso de errores#
	#GlobalVars._reset_quest()
	#print(\"Puntuacion \", GlobalVars.score)
	#hit_index = 0
	#texto_objetivo.set_visible_characters(texto_objetivo.text.length())			
	#texto_objetivo.text = quested_text
"

[node name="Combate" type="Node2D"]
scale = Vector2(1.007, 0.994766)
script = ExtResource("1_76hwp")

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = -3.97219
offset_top = 1.00526
offset_right = 1296.03
offset_bottom = 822.005
texture = ExtResource("1_bqnu1")
stretch_mode = 1

[node name="Lbl_rename" type="Label" parent="TextureRect"]
z_as_relative = false
layout_mode = 0
offset_left = 37.7915
offset_top = 14.8159
offset_right = 300.791
offset_bottom = 104.816
theme_override_fonts/font = ExtResource("11_qpa2r")
theme_override_font_sizes/font_size = 60
text = "SCORE :"

[node name="Num_points" type="Label" parent="TextureRect"]
layout_mode = 0
offset_left = 345.637
offset_top = 19.8422
offset_right = 385.637
offset_bottom = 109.842
theme_override_fonts/font = ExtResource("11_qpa2r")
theme_override_font_sizes/font_size = 60
text = "0
"

[node name="player" type="Sprite2D" parent="."]
position = Vector2(242.304, 489.562)
scale = Vector2(0.799377, 0.663692)
texture = ExtResource("2_ixi13")
region_enabled = true
region_rect = Rect2(44.0935, 17.4761, 137.153, 189.868)

[node name="o" type="Sprite2D" parent="."]
visible = false
position = Vector2(733.863, 433.268)
texture = SubResource("CompressedTexture2D_w6ybe")

[node name="k" type="Sprite2D" parent="."]
visible = false
position = Vector2(740.814, 173.91)
texture = SubResource("CompressedTexture2D_7vy8i")

[node name="e" type="Sprite2D" parent="."]
visible = false
position = Vector2(252.234, 165.868)
scale = Vector2(0.504597, 0.439598)
texture = SubResource("CompressedTexture2D_6afua")

[node name="s1" type="Sprite2D" parent="."]
visible = false
position = Vector2(1156.9, 192.005)
texture = SubResource("CompressedTexture2D_d62nk")

[node name="Sonrisa" type="Sprite2D" parent="."]
position = Vector2(-392.254, 1067.59)
texture = ExtResource("9_efevc")

[node name="Sonrisa2" type="Sprite2D" parent="."]
position = Vector2(-377.358, 826.325)
texture = ExtResource("9_efevc")

[node name="CartaJoker" type="Sprite2D" parent="."]
visible = false
position = Vector2(707.052, 1158.06)
texture = ExtResource("10_4gqkx")

[node name="CartaJoker2" type="Sprite2D" parent="."]
visible = false
position = Vector2(1040.72, 1158.06)
texture = ExtResource("10_4gqkx")

[node name="CartaJoker3" type="Sprite2D" parent="."]
visible = false
position = Vector2(1414.1, 1158.06)
texture = ExtResource("10_4gqkx")

[node name="unpressedj" type="Sprite2D" parent="."]
visible = false
position = Vector2(435.948, 220.152)
texture = SubResource("CompressedTexture2D_wvgyw")

[node name="pressedj" type="Sprite2D" parent="."]
visible = false
position = Vector2(195.631, 530.778)
texture = SubResource("CompressedTexture2D_55uus")

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="pressedj"]
position = Vector2(-117.18, 3.06781e-05)

[node name="Clown1" type="Sprite2D" parent="."]
position = Vector2(1039.72, 463.426)
scale = Vector2(0.25094, 0.243171)
texture = ExtResource("7_gc2og")
flip_h = true
region_enabled = true
region_rect = Rect2(0.817993, -8.545, 547, 633)

[node name="Texto" type="RichTextLabel" parent="Clown1"]
offset_left = -2995.69
offset_top = -735.846
offset_right = -1383.69
offset_bottom = -510.846
theme_override_colors/default_color = Color(0.00784314, 0.211765, 0.921569, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0.756863, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("14_8hric")
theme_override_font_sizes/normal_font_size = 160
text = "TEXTO DE PRUEBA"
fit_content = true
script = SubResource("GDScript_sxsv5")

[node name="blue_nose" type="Sprite2D" parent="Clown1"]
position = Vector2(-94.9759, -62.0098)
scale = Vector2(1.73721, 1.80562)
texture = ExtResource("9_57hj2")
region_enabled = true
region_rect = Rect2(0, 0, 31, 33)

[node name="Marker2D" type="Marker2D" parent="Clown1/blue_nose"]
position = Vector2(-2.27803, 199.187)
scale = Vector2(2.29392, 2.27752)

[node name="KeypressedTimer" type="Timer" parent="."]

[connection signal="timeout" from="KeypressedTimer" to="." method="_on_keypressed_timer_timeout"]
